# xoscope

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.f51  TODO  TODO.old  acconfig.h  aclocal.m4  alsa.c  bitscope.c  bitscope.h  callbacks.c  callbacks.h  com_gtk.c  com_gtk.h  comedi.c  comedi_gtk.c  config.h  config.h.in  configure  configure.ac  configure.in  display.c  display.h  esd.c  esd_gtk.c  fft.c  fft.h  file.c  file.h  func.c  func.h  gr_gtk.c  interface.c  interface.h  mkinstalldirs  net.sourceforge.xoscope.appdata.xml  (+26 more)
gtkdatabox-0.6.0.0/gtk/: Makefile.am  Makefile.in  gtkdatabox.c  gtkdatabox.h  gtkdatabox_bars.c  gtkdatabox_bars.h  gtkdatabox_cross_simple.c  gtkdatabox_cross_simple.h  gtkdatabox_graph.c  gtkdatabox_graph.h  gtkdatabox_grid.c  gtkdatabox_grid.h  gtkdatabox_lines.c  gtkdatabox_lines.h  gtkdatabox_marker.c  gtkdatabox_marker.h  gtkdatabox_marshal.c  gtkdatabox_marshal.h  gtkdatabox_points.c  gtkdatabox_points.h  gtkdatabox_xyc_graph.c  gtkdatabox_xyc_graph.h
hardware/: HARDWARE  buff.fig  buff.ps  buff2.fig  buff2.ps  pcb.fig  pcb.ps
